src/styles/module.less
/* ... */
[class^="fabricate-icon-"], [class*="fabricate-icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: "fabricate-regular" !important;
  speak: none;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.fabricate-icon-logo:before {
  content: "\e900";
  font-weight: 400;
}

/*
=====================================================================
  END FABRICATE CUSTOM WEB FONT STYLES
=====================================================================
*/

/*
=====================================================================
  BEGIN CSS RESET
=====================================================================
*/

#fab-tw-application-container {
  @import (inline) "preflight-reset.css";

  * {
    scrollbar-color: initial;
    scrollbar-width: initial;
  }

  a {
    &:hover {
      text-shadow: none;
    }
  }

}

/*
=====================================================================
  END CSS RESET
=====================================================================
*/

/*
=====================================================================
  BEGIN FABRICATE TAILWIND SUPPORTING STYLES
=====================================================================
*/

:root [data-theme='fabricate-skeleton-theme'] {

  .scroll-thumb {
    outline: none;
    border-radius: 3px;
    border: none;
  }

  .scroll-track {
    border-radius: 6px;
    box-shadow: 0 0 1px #999 inset;
  }

  .scroll {
    &::-webkit-scrollbar-track {
      .scroll-track();
    }
    &::-webkit-scrollbar-thumb {
      .scroll-thumb();
    }
    &::-webkit-scrollbar {
      width: 6px;
    }
  }

  .scroll-primary {
    &::-webkit-scrollbar-thumb {
      .scroll-thumb();
      background: #ac9e6c;
    }
  }

  .scroll-secondary {
    &::-webkit-scrollbar-thumb {
      .scroll-thumb();
      background: #bc9276;
    }
  }

  img.avatar-image {
    border: none;
    border-radius: 0;
  }

}

/*
=====================================================================
  END FABRICATE TAILWIND SUPPORTING STYLES
=====================================================================
*/

/*
=====================================================================
  BEGIN TAILWIND DIRECTIVES
=====================================================================
*/

@tailwind base;
@tailwind components;
@tailwind utilities;

/*
=====================================================================
  END TAILWIND DIRECTIVES
=====================================================================
*/

